Fix: rebuild portfolio returns after rebalancing